--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -4,33 +4,33 @@
 
 # acm_id: # your dl.acm.org/profile/id
 # blogger_url: # your blogger URL
-# bluesky_url: # your bluesky URL
+bluesky_url: https://bsky.app/profile/narmph.info # your bluesky URL
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: you@example.com # your email address
+email: narmph@umich.edu # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-# github_username: # your GitHub user name
+github_username: narmph # your GitHub user name
 # gitlab_username: # your GitLab user name
 # ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1010907 # Inspire HEP author ID
+# inspirehep_id: 1010907 # Inspire HEP author ID
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: # your LinkedIn user name
+linkedin_username: nana-porter-honicky-86bb7a73 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-# orcid_id: # your ORCID ID
+orcid_id: 0000-0001-5155-7966 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
-rss_icon: true # set to true to show the RSS icon
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+# rss_icon: true # set to true to show the RSS icon
+scholar_userid: 3hTNmpgAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
@@ -45,7 +45,11 @@ scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social: # can be any name here other than the ones already defined above
-  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-  title: Custom Social
-  url: https://www.alberteinstein.com/
+letterboxd: # can be any name here other than the ones already defined above
+  logo: https://a.ltrbxd.com/logos/letterboxd-decal-dots-pos-mono-500px.png # can be png, svg, jpg
+  title: letterboxd # title of the social media
+  url: https://letterboxd.com/narmph/
+goodreads: # can be any name here other than the ones already defined above
+  logo: https://kagi.com/proxy/goodreads-icon-1023x1024-gsv93smd.png?c=QP2UaTfTjxbvh1mj9trnBBiFSSEso94_3UUCInEu3eUSu5ZFf1ngVlf6FwYe-_g5AdOMitAqHyQsybJd1FheIs0o--24spCnrCNicOuM94aq8ouYLEudC5Pwb87uopkZ # can be png, svg, jpg
+  title: goodreads # title of the social media
+  url: https://www.goodreads.com/user/show/108893112-nana-porter-honicky
