--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,11 @@ newsletter:
 # -----------------------------------------------------------------------------
 
 collections:
+  shelf:
+    output: true
   books:
+    output: true
+  movies:
     output: true
   news:
     defaults:
@@ -248,13 +252,23 @@ terser:
 
 jekyll-archives:
   posts:
-    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+    enabled: [year, tags, categories]
     permalinks:
       year: "/blog/:year/"
       tags: "/blog/:type/:name/"
       categories: "/blog/:type/:name/"
   books:
-    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+    enabled: [year, tags, categories]
+    permalinks:
+      year: "/books/:year/"
+      tags: "/books/:type/:name/"
+      categories: "/books/:type/:name/"
+  movies:
+    enabled: [year, tags, categories]
+    permalinks:
+      year: "/movies/:year/"
+      tags: "/movies/:type/:name/"
+      categories: "/movies/:type/:name/"
 
 display_tags: ["personal"] # these tags will be displayed on the front page of your blog
 display_categories: #["external-posts"] # these categories will be displayed on the front page of your blog
